automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -134,7 +134,7 @@
    "outputs": [],
    "source": [
     "italy = None # 'Italy'\n",
-    "countries-\n",
+    "countries[-3]\n",
     "italy"
    ]
   },
