automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -132,8 +132,8 @@
    "outputs": [],
    "source": [
     "italy = None # 'Italy'\n",
-    "countries[-3]\n",
-    "italy"
+    "italy\n",
+    "countries[-3]"
    ]
   },
   {
