automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -127,13 +127,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Canada'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "italy = None # 'Italy'\n",
     "italy\n",
-    "countries[-3]"
+    "countries[-2]"
    ]
   },
   {
