--- a/index.ipynb
+++ b/index.ipynb
@@ -142,9 +142,8 @@
     }
    ],
    "source": [
-    "italy = None # 'Italy'\n",
-    "italy\n",
-    "countries[-3]"
+    "italy = countries[-3] # 'Italy'\n",
+    "italy"
    ]
   },
   {
