--- a/index.ipynb
+++ b/index.ipynb
@@ -251,7 +251,7 @@
    },
    "outputs": [],
    "source": [
-    "kindof_neighbors.append('')"
+    "kindof_neighbors.append('Malta')\n"
    ]
   },
   {
