automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -279,7 +279,8 @@
    },
    "outputs": [],
    "source": [
-    "None # add code here"
+    "kindof_neighbors.append('Malta')\n",
+    "kindof_neighbors"
    ]
   },
   {
