automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -273,13 +273,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['USA', 'Argentina', 'Mexico', 'USA', 'Malta', 'Thailand']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "kindof_neighbors.append('Malta')\n",
+    "kindof_neighbors.append('Thailand')\n",
     "kindof_neighbors"
    ]
   },
