automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -260,8 +260,8 @@
     }
    ],
    "source": [
-    "kindof_neighbors.append('Malta')\n",
-    "kindof_neighbors"
+    "countries.append('Malta')\n",
+    "countries"
    ]
   },
   {
