automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -288,8 +288,8 @@
     }
    ],
    "source": [
-    "kindof_neighbors.append('Thailand')\n",
-    "kindof_neighbors"
+    "countries.append('Thailand')\n",
+    "countries"
    ]
   },
   {
