automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -472,7 +472,7 @@
    },
    "outputs": [],
    "source": [
-    "unique_countries = set"
+    "unique_countries = set(countries)"
    ]
   },
   {
