--- a/index.ipynb
+++ b/index.ipynb
@@ -518,7 +518,7 @@
    },
    "outputs": [],
    "source": [
-    "num_of_repeats = len(countries) - \n",
+    "num_of_repeats = len(countries) - unique_countries\n",
     "num_of_repeats # 3"
    ]
   },
